# 3d-batch-copy

./: .gitignore  3D文件批量复制工具.py  3d-batch-copy.py  Original file list.csv  Original file list.txt  README.md  app.py  config.ini  index.html  main_gui.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
exe/: build.bat
scripts/: build_exe.ps1
